@@ -160,6 +160,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #8853: Allow port to be of type long for socket.getaddrinfo().
+
 - Issue #16597: In buffered and text IO, call close() on the underlying stream
   if invoking flush() fails.
 
